objects/ssot__ActionPlanItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionPlanId__c</fullName>
        <label>Action Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionPlanItem_TargetId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanItem_TargetId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>ActionPlanItem_TargetId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>ActionPlanItem_TargetId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ActionPlanTemplateItemId__c</fullName>
        <label>Action Plan Template Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DependencyStatus__c</fullName>
        <label>Dependency Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisplayOrderNumber__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Action Plan Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ItemId__c</fullName>
        <label>Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ItemObject__c</fullName>
        <label>Item Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ItemState__c</fullName>
        <label>Item State</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetId__c</fullName>
        <label>Target</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetObject__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817654609_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanItem_TargetId_map_Account__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ActionPlanItem_TargetId_map_Account__rel</relationshipLabel>
        <relationshipName>rel_1719817654609_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818170306_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanItem_ActionPlanId_map_Acti_rel</label>
        <referenceTo>ssot__ActionPlan__dlm</referenceTo>
        <relationshipLabel>ActionPlanItem_ActionPlanId_map_Acti_rel</relationshipLabel>
        <relationshipName>rel_1719818170306_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818173807_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanItem_ActionPlanTemplateIte_rel</label>
        <referenceTo>ssot__ActionPlanTemplateItem__dlm</referenceTo>
        <relationshipLabel>ActionPlanItem_ActionPlanTemplateIte_rel</relationshipLabel>
        <relationshipName>rel_1719818173807_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>